--- a/res/layout/activity_login_view.xml
+++ b/res/layout/activity_login_view.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/version_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="22dp"
