--- a/res/layout/app_category_cell.xml
+++ b/res/layout/app_category_cell.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
+    <ImageView
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:textSize="30sp"
-        android:background="@drawable/login_blur"
-        android:textColor="#f0f0f0"
         android:layout_height="144dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:text="Category Name"
+        android:scaleType="center"
+        android:id="@+id/app_category_cell_image"
+        android:src="@drawable/login_blur"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name of category"
+        android:textSize="20sp"
+        android:textColor="#f0f0f0"
         android:id="@+id/app_category_cell_name"
-        android:layout_gravity="center_horizontal" />
-</LinearLayout>
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+
+</RelativeLayout>
